Se agregó la hoja de estilos

--- a/index.html
+++ b/index.html
@@ -5,8 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ricardo Pacheco | Portafolio</title>
+    <link href="./css/estilos.css" rel="stylesheet">
 </head>
 <body>
-    
+
+    <header>
+        <a href="#">Inicio</a>
+        <a href="#">Acerca De Nosotros</a>
+        <a href="#">Contacto</a>
+    </header>
+    <h1>Lenguajes De Programación Vistos</h1>
+    <ol>
+        <li>C#</li>
+        <li>Java</li>
+        <li>Python</li>
+        <li>JavaScript</li>
+        <li>C++</li>
+    </ol>
 </body>
 </html>
