--- a/index.html
+++ b/index.html
@@ -9,20 +9,30 @@
     <link href="./css/estilos.css" rel="stylesheet">
 </head>
 <body>
-    <ul class="nav nav-pills nav-fill">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Inicio</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="./myrepos.html">Sobre nosotros</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled">Disabled</a>
-        </li>
-      </ul>
+  <nav class="navbar navbar-light bg-transparent">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">
+        <img src="./images/img_1.jpg" alt="" width="30" height="24" class="d-inline-block align-text-top">
+        Ricardo Pacheco</a>
+        <form class="d-flex">
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success" type="submit">Search</button>
+        </form>
+    </div>
+  </nav>
+  <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="./images/img_2.jpg" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="./images/img_3.jpg" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="..." class="d-block w-100" alt="...">
+      </div>
+    </div>
+  </div>
 
 
 
