--- a/index.html
+++ b/index.html
@@ -1,28 +1,92 @@
 <!DOCTYPE html>
-<html lang="es">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ricardo Pacheco | Portafolio</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link href="./css/estilos.css" rel="stylesheet">
-</head>
-<body>
-  <nav class="navbar navbar-light bg-transparent">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">
-        <img src="./images/img_1.jpg" alt="" width="30" height="30" class="d-inline-block align-text-top">
-        Ricardo Pacheco</a>
-        <form class="d-flex">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
-    </div>
-  </nav>
+    <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Ricardo Gabriel</title>
+    <!-----FONT AWESOME-->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/estilos.css">
+    <body>
 
+      <nav class="navbar navbar-dark bg-dark">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">
+            <img src="./images/img_1.jpg" alt="" width="25px" height="25px" class="d-inline-block align-text-top">
+              Ricardo Pacheco
+          </a>
+        </div>
+      </nav>
+        <div class="bgimg-1">
+            <div class="caption">
+                <span class="border">Servicios</span>
+            </div>
+        </div>
 
+        <div class="container">
+            <div class="row pt-5">
+                <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+                </div>
+                <div class="card-deck">
+                    <div class="card">
+                        <img class="card-img-top" src="./images/img_2.jpg" />
+                        <div class="card-body bg-dark text-light">
+                            <h4 class="card-title"><i class="fas fa-code"></i> Desarollo Web</h4>
+                            <p class="card-text text-justify">Creamos tú página web para tú negocio o empresa utilizando las tecnlogías más
+                              actuales. 
+                            </p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img class="card-img-top" src="./images/img_3.jpg"/>
+                        <div class="card-body bg-dark text-light">
+                            <h4 class="card-title"><i class="fas fa-mobile-alt"></i> Aplicaciones Móviles</h4>
+                            <p class="card-text text-justify">Diseñamos tú aplicación móvil para Android o IOS</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row pt-5">
+                <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+                </div>
+                <div class="card-deck">
+                    <div class="card">
+                        <img class="card-img-top" src="./images/img_4.jpg"/>
+                        <div class="card-body bg-dark text-light">
+                            <h4 class="card-title"><i class="fas fa-network-wired"></i> Redes De Computadoras</h4>
+                            <p class="card-text text-justify">Ofrecemos instalación de cableado y estructado, Switch, Router, AP y Servidores</p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img class="card-img-top" src="./images/img_6.jpg">
+                        <div class="card-body bg-dark text-light">
+                            <h4 class="card-title"><i class="fas fa-laptop"></i> Reparación y Mantenimiento De PC</h4>
+                            <p class="card-text text-justify">
+                              Reparamos y le brindamos mantenimiento preventivo y correctivo de su PC, ofreciendo mejoras en el rendimiento. 
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
+        <hr>
+        <footer>
+          <div class="container_2">
+              <div class="logo">
+                <img src="./images/img_1.jpg" width="25px" height="25px">
+                <p> Ricardo Pacheco</p>
+              </div>
+            <div class="iconos">
+              <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></a>
+              <a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
+              <a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+            </div>
+          </div>
+        </footer>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-</body>
+       <!--<script src="JS/jquery-3.2.1.min.js"></script>
+        <script src="JS/bootstrap.js"></script>-->
+    </body>
 </html>
