Se agregarÃon los enlaces en el nav de la pagina

--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
             <img src="./images/img_1.jpg" alt="" width="25px" height="25px" class="d-inline-block align-text-top">
               Ricardo Pacheco
           </a>
+          <ul class="enlaces">
+            <li><a href="#">Inicio</a></li>
+            <li><a href="#">Sobre mi</a></li>
+            <li><a href="#">Contacto</a></li>
+          </ul>
         </div>
       </nav>
         <div class="bgimg-1">
